<resources>
    <string name="app_name">Projeto1</string>
    <string name="permition">Pedir Permissão</string>
    <string name="mensagem">Mensagem</string>
    <string name="telefone">Telefone</string>
    <string name="pontobarra">. ou -</string>
    <string name="delete">Delete</string>
    <string name="envio">Enviar</string>
    <string name="space">Espaço</string>
    <string name="mmp">Mensagens Prontas</string>
    <string name="dict">Dicionário</string>
    <string name="back">Voltar</string>
    <string name="mmp0">Estou com fome!</string>
    <string name="mmp1">Estou com sede!</string>
    <string name="mmp2">Estou com dor!</string>
    <string name="mmp3">Venha aqui rápido!</string>
    <string name="mmp4">Preciso ir ao banheiro!</string>
    <string name="cima">^</string>
    <string name="baixo">v</string>
    <string name="selectButton">Selecionar</string>
    <string name="editar">Editar</string>
    <string name="addContact">Adicionar Contato</string>
    <string name="lista">Lista de Contatos:</string>
    <string name="contato">Contatos</string>
</resources>
