<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingEnd="8dp"
    android:layout_row="5"
    tools:context=".ContactActivity">

    <TextView android:id="@+id/lista"
        android:hint="Lista de nomes"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"/>
    <ScrollView
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0">

        <LinearLayout
            android:id="@+id/contatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/upButton"
        android:layout_width="200dp"
        android:layout_height="98dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="80dp"
        android:layout_marginStart="80dp"
        android:textSize="23sp"
        android:hint="@string/cima"/>

    <Button android:id="@+id/backButton"
        android:layout_width="60dp"
        android:layout_height="197dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:hint="@string/back"
        android:textSize="12sp"/>

    <Button android:id="@+id/selectButton"
        android:layout_width="60dp"
        android:layout_height="197dp"
        android:layout_row="2"
        android:layout_column="0"
        android:textSize="12sp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="280dp"
        android:hint="@string/selectButton"/>

    <Button
        android:id="@+id/downButton"
        android:layout_width="200dp"
        android:layout_height="98dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginStart="80dp"
        android:layout_marginTop="110dp"
        android:textSize="17sp"
        android:hint="@string/baixo"/>

</GridLayout>